@@ -6,3 +6,21 @@
 #	--------------------		-----------------
 #
 sigren	"foo"				"bar"
+sigren	"\esc[ape]_2esc "		"\chg_esc[ape]_2esc "
+sigren	"\esc[ape]_2esc_nospace "	"\chg_esc[ape]_2esc_nospace "
+sigren	"\esc[ape]_2non "		"chg_escape_2non"
+sigren	"\esc[ape]_2non_nospace "	"chg_escape_2non_nospace"
+sigren	"\esc[ape]_2ext "		"\chg_escape_2ext "
+sigren	"\esc[ape]_2ext_nospace "	"\chg_escape_2ext_nospace "
+sigren	"non_2esc"			"\chg_non[ape]_2esc "
+sigren	"non_2esc_nospace"		"\chg_non[ape]_2esc_nospace "
+sigren	"non_2non"			"chg_non_2non"
+sigren	"non_2non_nospace"		"chg_non_2non_nospace"
+sigren	"non_2ext"			"\chg_non_2ext "
+sigren	"non_2ext_nospace"		"\chg_non_2ext_nospace "
+sigren	"ext_2esc"			"\chg_ext[ape]_2esc "
+sigren	"ext_2esc_nospace"		"\chg_ext[ape]_2esc_nospace "
+sigren	"ext_2non"			"chg_ext_2non"
+sigren	"ext_2non_nospace"		"chg_ext_2non_nospace"
+sigren	"ext_2ext"			"\chg_ext_2ext "
+sigren	"ext_2ext_nospace"		"\chg_ext_2ext_nospace "
