@@ -1,4 +1,4 @@
-# Generated by vrename on Fri Sep 11 21:34:45 2015
+# Generated by vrename on Wed May  1 06:55:43 2019
 #
 # Files read for this analysis:
 vfile	"t/51_vrename_kwd.v"
@@ -8,9 +8,25 @@ vfile	"t/51_vrename_kwd.v"
 #
 sigren	"$display"			"$display"
 sigren	"\do "				"\do "
-sigren	"\esc[ape]d "			"\esc[ape]d "
+sigren	"\esc[ape]_2esc "		"\esc[ape]_2esc "
+sigren	"\esc[ape]_2esc_nospace "	"\esc[ape]_2esc_nospace "
+sigren	"\esc[ape]_2ext "		"\esc[ape]_2ext "
+sigren	"\esc[ape]_2ext_nospace "	"\esc[ape]_2ext_nospace "
+sigren	"\esc[ape]_2non "		"\esc[ape]_2non "
+sigren	"\esc[ape]_2non_nospace "	"\esc[ape]_2non_nospace "
 sigren	"do"				"\do "
-sigren	"foo"				"foo"
+sigren	"ext_2esc"			"ext_2esc"
+sigren	"ext_2esc_nospace"		"ext_2esc_nospace"
+sigren	"ext_2ext"			"ext_2ext"
+sigren	"ext_2ext_nospace"		"ext_2ext_nospace"
+sigren	"ext_2non"			"ext_2non"
+sigren	"ext_2non_nospace"		"ext_2non_nospace"
+sigren	"non_2esc"			"non_2esc"
+sigren	"non_2esc_nospace"		"non_2esc_nospace"
+sigren	"non_2ext"			"non_2ext"
+sigren	"non_2ext_nospace"		"non_2ext_nospace"
+sigren	"non_2non"			"non_2non"
+sigren	"non_2non_nospace"		"non_2non_nospace"
 sigren	"vrename_kwd"			"vrename_kwd"
 #
 # Use M-x compile in emacs to automatically perform the changes:
