@@ -6,6 +6,8 @@ indicates the contributor was also the author of the fix; Thanks!
 
 * Verilog::Language 3.463 devel
 
+****    Fix vrename with escaped names, bug1420. [Kerry Imming]
+
 
 * Verilog::Language 3.462 2019-04-09
 
